feat(admin): add financials page and fix notifications
